fix: update top-navigation z-index to be above other portals

--- a/apps/ez-web/src/styles/index.css
+++ b/apps/ez-web/src/styles/index.css
@@ -21,7 +21,7 @@ body.awsui-dark-mode {
   top: 0;
   position: fixed;
   height: auto !important;
-  z-index: 1002;
+  z-index: 7001;
 }
 
 #c {
